--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -5,19 +5,19 @@
      <div class="col-md-6 col-sm-6">
       <section>
        <span class="block-title">Essay <span>Online</span></span>
-       <p>Are there times when you have multiple assignments from different classes that are due all around the same times? Are there times when you feel like you are just too swamped with all of the school work that you have to do? Are you worried about your GPA because there are times when you do not get all of your work completed for lack of time? If you answered "yes" to these questions, then you are not the only one. Many students get weighed down with their school work, but many of them have also found help with their assignments, particularly with their essays. How do they do it? They buy essay online help. This solves their dilemmas of having way too much work to do and not enough time to do it.</p>
+       <p>Have you ever had a problem dealing with multiple assignments from different classes that should should be written around the same time? Do you sometimes feel like swamped with all the academic work that you do? Maybe there are times when you are worried about your GPA because sometimes you can’t finish all tasks on time? If you can answer to one of these questions “yes” then you are on the right path. Many students struggle with their school work, but some of them found a way to get help with their assignments, especially with those boring essays. What is their secret? They use custom essay help. This solves many problems and creates a way for students to pay more attention and excel in subjects they are interested in.</p>
       </section>
      </div>
 
      <div class="col-md-6 col-sm-6">
       <section>
        <span class="block-title">Online Essay <span>Writing Services</span></span>
-       <p>There are several essay writing services where you can buy essays online. You should just be sure to choose the most qualified service, so that you will get the best assignment for the best price. All essay writing services are not all the same. Be sure to do some research and ask questions before you use a particular service, so that you are not scammed.</p>       
+       <p>There are few good essay writing services where one can buy essay online. But to be sure that you will receive a good and original paper for the best price you need to  order from the best. Most essay writing companies do not understand what their customers need. We are not one of those companies.</p>       
       </section>
 
       <section>
        <span class="block-title">Writing <span>Essays</span></span>
-       <p>Writing essays is a necessary part of your academic curriculum and they can be a problem, especially if you do not have the time to do them, or if you are not yet experienced enough to produce essays with the type of quality you want. The answer to your essay writing problems will cease if you buy essay help on the Internet.</p>
+       <p>Writing essay assignments is crucial part of academic curriculum, and sometimes this can be a problem, especially when one has no time to write them, or if one is not experienced yet to write papers the school demands. The answer to all these problems is ordering an essay via essay writing company like EssayCoffee.</p>
       </section>
      </div>
     </div>
@@ -35,7 +35,8 @@
 		<ul class="bottom_list" style="width:350px">
 			<li class="fifth"><a href="{% url 'cookie-policy' %}" rel="nofollow">Cookie Policy</a></li>
 			<li class="fifth"><a href="{% url 'money-back-guarantee' %}" rel="nofollow">Money Back Guarantee</a></li>                 
-			<li class="fifth"><a href="{% url 'progressive-delivery' %}" rel="nofollow">Progressive Delivery</a></li>
+			{# <li class="fifth"><a href="{% url 'progressive-delivery' %}" rel="nofollow">Progressive Delivery</a></li> #}
+			<li class="fifth"><a href="{% url 'contact' %}">Contact us</a></li>
 		</ul>
 
 		<ul class="bottom_list" style="width:180px">
@@ -55,7 +56,7 @@
   <div id="copyright">
     <div class="container">
      <div class="row">
-      <div class="col-md-6 col-sm-12">Copyright © 2013-2014 essatcoffee.com All Rights Reserved | <a href="#">essatcoffee.com</a></div>
+      <div class="col-md-6 col-sm-12">Copyright © 2013-2014 All Rights Reserved | <a href="{% url 'home' %}">essaycoffee.com</a></div>
       <div class="col-md-6 col-sm-12 text-right">
        <span>We accept:</span>
        <ul class="merchants">
