--- a/templates/html/slider.html
+++ b/templates/html/slider.html
@@ -10,20 +10,20 @@
 				data-y="44" 
 				data-speed="400" 
 				data-start="1000" 
-				data-easing="easeOutBack">LOREM IPSUM</div>
+				data-easing="easeOutBack">Essay Coffee</div>
 				
 				<div class="caption lft slide-description"  
 				data-x="76" 
 				data-y="132" 
 				data-speed="400" 
-				data-start="1500" 
-				data-easing="easeOutBack">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</div>
+				data-start="2000" 
+				data-easing="easeOutBack">Good knowledge doesn’t always come with good writing skills… We, at Essay Coffee, understand that and offer you our help so you can achieve your well-deserved academic success!</div>
 				
-				<a href="{% url 'new-order' %}" class="caption lft slide-btn btn-transparent"
+				<a href="{% url 'new-order' %}" class="caption lft slide-btn btn-transparent btn-orage"
 				data-x="190" 
 				data-y="226" 
 				data-speed="400" 
-				data-start="2000" 
+				data-start="3000" 
 				data-easing="easeOutBack">Order Now</a>
 			  </li>
 
@@ -34,20 +34,20 @@
 				data-y="44" 
 				data-speed="400" 
 				data-start="1000" 
-				data-easing="easeOutBack">simply dummy</div>
+				data-easing="easeOutBack">Essay Coffee</div>
 				
 				<div class="caption lft slide-description"  
 				data-x="76" 
 				data-y="132" 
 				data-speed="400" 
-				data-start="1500" 
-				data-easing="easeOutBack">Is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</div>
+				data-start="2000" 
+				data-easing="easeOutBack">We offer the best professional custom research help for English speaking students! If you are struggling with writing your assignment than don’t wait and ask us to help you!</div>
 				
-				<a href="{% url 'new-order' %}" class="caption lft slide-btn btn-transparent"
+				<a href="{% url 'new-order' %}" class="caption lft slide-btn btn-transparent btn-orage"
 				data-x="190" 
 				data-y="226" 
 				data-speed="400" 
-				data-start="2000" 
+				data-start="3000" 
 				data-easing="easeOutBack">Order Now</a>
 			  </li>
 			</ul>
