--- a/templates/html/main.html
+++ b/templates/html/main.html
@@ -11,8 +11,8 @@
     <div class="container">
      <div class="row text-center">
       <div class="col-md-12">
-       <span class="section-title">Advantages of our custom <span>writing services</span></span>
-       <p class="section-description">Good knowledge of such citation styles as MLA, APA, Harvard, Chicago and Turabian is a must for all our writers. They can help you format your paper in any of those styles. We are a flexible and convenient writing service, you ask – we do!</p>
+       <span class="section-title">Advantages of EssayCoffee custom <span>writing services</span></span>
+       <p class="section-description">At EssayCoffee we provide customers only with the best custom written  papers as well as all kinds of additional services students can imagine. Become one of our customers to get the best solution market can provide!</p>
       </div>
      </div>
 
@@ -20,22 +20,20 @@
       <div class="iconbox col-md-6 col-sm-6">
        <div class="box-heading text-center">
         <i class="box-icon icon-page"></i>
-        <h3>Get Help with Your Required Format</h3>
+        <h3>Get Help with the formatting!</h3>
        </div>
-
        <div class="box-description text-center">
-        Good knowledge of such citation styles as MLA, APA, Harvard, Chicago and Turabian is a must for all our writers. They can help you format your paper in any of those styles. We are a flexible and convenient writing service, you ask – we do!
+		Perfect understanding of referencing styles like MLA, APA, Harvard, Chicago and Turabian is a must for all writers working at EssayCoffee. They will closely follow all your requirements and will format your paper in any style you choose. Don’t wait and place an order!
        </div>
       </div>
 
       <div class="iconbox col-md-6 col-sm-6">
        <div class="box-heading text-center">
         <i class="box-icon icon-inkwell"></i>
-        <h3>We Are NOT a Database of Pre-Written Essays</h3>
+        <h3>We Do Not Store Your Essays!</h3>
        </div>
-
        <div class="box-description text-center">
-        We sell only products that were written from scratch. We do not resell previously written papers to our customers, and we do not work with any essay databases.
+        All our papers are written from scratch by writers that are highly skilled in their fields of knowledge. We never resell papers that were previously written for our customers and we do not use any databases to write papers for you. 
        </div>
       </div>
      </div>
@@ -44,22 +42,20 @@
       <div class="iconbox col-md-6 col-sm-6">
        <div class="box-heading text-center">
         <i class="box-icon icon-pen"></i>
-        <h3>Writing from Scratch Is Our Specialization</h3>
+        <h3>Writing from Scratch Is Our Specialization!</h3>
        </div>
-
        <div class="box-description text-center">
-        Our skilled and experienced writers produce custom paper from scratch and accourding to the requirements and instructions you set. This helps avoid plagiarism in the papers. Moreover, our writers team is a big one; therefore, we can match you up with the right writer.
+        Our team of highly experienced writers produces only original papers and according to the instructions and requirements you set; thus we avoid plagiarism in our papers. We spent years looking for devoted professionals who can write quality papers that match our high standards.
        </div>
       </div>
-
+	  
       <div class="iconbox col-md-6 col-sm-6">
        <div class="box-heading text-center">
         <i class="box-icon icon-badge"></i>
-        <h3>name.com Offers High Quality Papers</h3>
+        <h3>EssayCoffee Offers Only High Quality Papers!</h3>
        </div>
-
        <div class="box-description text-center">
-        We always aim at good quality to maintain our high palace on the market. You can make sure of that by trying out our custom writing service.
+        We strive to achieve excellence in all areas of academic expertise, that is why we have one of the highest returning customers rate in the industry. You can become one of our happy customers this day by just placing an order and getting the best custom written essay money can offer!
        </div>
       </div>
      </div>
@@ -86,7 +82,7 @@
      <div class="row text-center">
       <div class="col-md-12">
        <span class="section-title">How it <span>works</span>?</span>
-       <p class="section-description">Good knowledge of such citation styles as MLA, APA, Harvard, Chicago and Turabian is a must for all our writers. They can help you format your paper in any of those styles. We are a flexible and convenient writing service, you ask – we do!</p>
+       <p class="section-description">Placing order has never been easier than it is with EssayCoffee. Just click the  “Order Now” button, proceed to order form and fill out all the necessary information and choose payment system that suits you the best. After this relax and have a coffee while our team of professionals will handle your task and deliver it to you in due time.</p>
       </div>
      </div>
 
@@ -94,26 +90,26 @@
       <div class="col-md-12">
        <div class="col-md-3 col-sm-6 step-col step-col-1">
         <i class="step-icon icon-mail"></i>
-        <h4>Goal definition</h4>
-        <p>Fill out an inquiry with all instructions and specifications</p>
+        <h4>Create a New Order</h4>
+        <p>Fill out an inquiry with your instructions and specifications</p>
        </div>
 
        <div class="col-md-3 col-sm-6 step-col step-col-2">
         <i class="step-icon icon-info"></i>
-        <h4>Goal definition</h4>
-        <p>Provide all information a writer needs to work on your thesis</p>
+        <h4>Provide Information</h4>
+        <p>Provide all the need information so writer can start working on your paper</p>
        </div>
 
        <div class="col-md-3 col-sm-6 step-col step-col-3">
         <i class="step-icon icon-chat"></i>
-        <h4>Goal definition</h4>
-        <p>Stay in control by answering writers' questions and requests</p>
+        <h4>Stay in Touch</h4>
+        <p>Stay in touch to answer writer's questions and requests</p>
        </div>
 
        <div class="col-md-3 col-sm-6 step-col step-col-4">
         <i class="step-icon icon-arrow-down"></i>
-        <h4>Goal definition</h4>
-        <p>Download a custom thesis paper or dissertation</p>
+        <h4>Download paper</h4>
+        <p>Download your custom written paper</p>
        </div> 
       </div>     
      </div>
@@ -140,7 +136,7 @@
      <div class="row text-center">
       <div class="col-md-12">
        <span class="section-title">Our <span>Prices</span></span>
-       <p class="section-description">Good knowledge of such citation styles as MLA, APA, Harvard, Chicago and Turabian is a must for all our writers. They can help you format your paper in any of those styles. We are a flexible and convenient writing service, you ask – we do!</p>
+       <p class="section-description">By choosing our service you will get the best solution for the price. If you want to check how much your exact custom written paper will cost you, just use one of our calculators below:</p>
       </div>
      </div>
      <div class="row">
@@ -256,32 +252,33 @@
    <section id="testimonials-features">
     <div class="container">
      <div class="row">
-      <div id="testimonials" class="col-md-6 col-sm-6">
-       <span class="section-title">What Our <span>Customers Say</span>?</span>
+      <div id="testimonials" class="col-md-6 col-sm-6"> 
+       <span class="section-title">What our <span>Customers think</span>?</span>
        <div id="testimonials-carousel" class="owl-carousel">
         <div class="testimonial">
          <div class="testimonial-meta">
-          <span>Discipline:</span> Political Science<br>
-          <span>Topic title:</span> Chicano
+          <span>Discipline:</span> Sociology<br>
+          <span>Topic title:</span> Sporting Event Observation and Report
          </div>
          <div class="testimonial-text">
-          Our skilled and experienced writers produce custom paper from scratch and accourding to the requirements and instructions you set. This helps avoid plagiarism in the papers. Moreover, our writers team is a big one; therefore,
+          Dear Writer, This is great!<br>
+		  Thank you so much.
          </div>
-         <div class="testimonial-customer-id"><span>Customer id:</span> #77878</div>
+         <div class="testimonial-customer-id"><span>Customer id:</span> #78</div>
         </div>
 
         <div class="testimonial">
          <div class="testimonial-meta">
-          <span>Discipline:</span> Political Science<br>
-          <span>Topic title:</span> Chicano
+          <span>Discipline:</span> Literature<br>
+          <span>Topic title:</span> American Literature
          </div>
          <div class="testimonial-text">
-          Our skilled and experienced writers produce custom paper from scratch and accourding to the requirements and instructions you set. This helps avoid plagiarism in the papers. Moreover, our writers team is a big one; therefore,
+          Thank you very much for this essay and for having the consideration to write me back. Have a nice day.
          </div>
-         <div class="testimonial-customer-id"><span>Customer id:</span> #77878</div>
+         <div class="testimonial-customer-id"><span>Customer id:</span> #35</div>
         </div>
        </div>
-       <a href="#" class="btn-transparent btn-grey">More testimonials</a>
+       {# <a href="#" class="btn-transparent btn-grey">More testimonials</a> #}
       </div><!--testimonials-->
 
       <div id="features" class="col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1">
@@ -360,7 +357,7 @@
      <div class="row text-center">
       <div class="col-md-12">
        <span class="section-title">Our <span>Benefits</span></span>
-       <p class="section-description">Good knowledge of such citation styles as MLA, APA, Harvard, Chicago and Turabian is a must for all our writers. They can help you format your paper in any of those styles. We are a flexible and convenient writing service, you ask – we do! </p>
+       {# <p class="section-description">Good knowledge of such citation styles as MLA, APA, Harvard, Chicago and Turabian is a must for all our writers. They can help you format your paper in any of those styles. We are a flexible and convenient writing service, you ask – we do! </p> #}
       </div>
      </div>
 
