Fixed new-roder form

--- a/templates/orders/new-order.html
+++ b/templates/orders/new-order.html
@@ -1,5 +1,5 @@
 {% extends 'index.html' %}
-
+{% load render_status %}
 {% block breadcrump %}
 <div class="breadcrumbs">
  <a href="{% url 'home' %}">Home</a>
@@ -57,14 +57,14 @@
       </div>
      </div>
      <div class="form-group {% if form.level.errors %}has-error{% endif %}">
-      <label class="col-sm-5 control-label">Academic Level {{form.level.value}}</label>
+      <label class="col-sm-5 control-label">Academic Level</label>
       <div class="col-sm-5">
        <select name="level" class="form-control" onchange="displayPrice();">
          {% for val in co.LEVELS %}
            {% if forloop.first %}
              <option value="{{val.0}}" {% if not form.level.value %}selected {% endif %} disabled>{{val.1}}</option>
            {% else %}
-             <option value="{{val.0}}" {% if form.level.value == val.0 %}selected{% endif %}>{{val.1}}</option>
+             <option value="{{val.0}}" {% if form.level.value|to_int == val.0 %}selected{% endif %}>{{val.1}}</option>
            {% endif %}
          {% endfor %}
 	   </select>
@@ -73,7 +73,7 @@
      </div>
      <div class="form-group {% if form.urgency.errors %}has-error{% endif %}">
       <label class="col-sm-5 control-label">
-       First Draft Deadline  {{form.urgency.value}}
+       First Draft Deadline
        <span class="tooltip-wrapper">
         <a href="#" class="custom-tooltip" data-toggle="tooltip" data-placement="top" title="Pages tooltip">
          <i class="icon-info-popup"></i>
@@ -86,7 +86,7 @@
            {% if forloop.first %}
              <option value="{{val.0}}" {% if not form.urgency.value %}selected {% endif %} disabled>{{val.1}}</option>
            {% else %}
-             <option value="{{val.0}}" {% if form.urgency.value == val.0 %}selected{% endif %}>{{val.1}}</option>
+             <option value="{{val.0}}" {% if form.urgency.value|to_int == val.0 %}selected{% endif %}>{{val.1}}</option>
            {% endif %}
          {% endfor %}
 	   </select>
@@ -168,7 +168,7 @@
        </span>
       </label>
       <div class="col-sm-5">
-       <input name="source_number" type="number" class="form-control" value="{{form.source_number.value|default:1}}">
+       <input name="source_number" type="number"  min=1 class="form-control" value="{{form.source_number.value|default:1}}">
        {% if form.source_number.errors %}<span class="validation-message">{{form.source_number.errors|striptags}}</span>{% endif %}
       </div>
      </div>
@@ -197,7 +197,7 @@
        </span>
       </label>
       <div class="col-sm-5">
-       <input name="page_number" type="number" class="form-control" value="{{form.page_number.value|default:1}}" onchange="displayPrice();">
+       <input min=1 name="page_number" type="number" class="form-control" value="{{form.page_number.value|default:1}}" onchange="displayPrice();">
        {% if form.page_number.errors %}<span class="validation-message">{{form.page_number.errors|striptags}}</span>{% endif %}
       </div>
      </div>
@@ -418,18 +418,20 @@ var onAssigmentChange = function() {
 	var items = getData(curItem);
 	if (items)
 	{
-	  var levelSelect = $("select[name=level]"),
-          urgencySelect = $("select[name=urgency]");
-		  
+    var levelSelect = $("select[name=level]"),
+        urgencySelect = $("select[name=urgency]");
+    var curLevelSelect = $("select[name=level] option:selected").val(),
+        curUrgencySelect = $("select[name=urgency] option:selected").val();
+
 	  // При першому виборі значення забираємо атрибут disabled 
 	  levelSelect.attr("disabled", false);
 	  urgencySelect.attr("disabled", false);
-		  
+    
 	  // Очищаємо вміст тегів
 	  levelSelect.empty();
 	  urgencySelect.empty();
-	  
-	  // Встановлюємо заглушку з нульовими значенями
+
+	  // Встановлюємо заглушку з нульовими значеннями
 	  levelSelect.append($("<option disabled selected/>").val('0').text('Please select'));
 	  urgencySelect.append($("<option disabled selected/>").val('0').text('Please select')); 
 
@@ -440,7 +442,10 @@ var onAssigmentChange = function() {
 	  $.each(items.levels, function(key, val) {
 		levelSelect.append($("<option />").val(key).text(val));
 	  });
-	  
+	  // Restore prev values.
+	  levelSelect.val(curLevelSelect);
+	  urgencySelect.val(curUrgencySelect);
+
 	} else {
 	  clearPrice();
 	}
@@ -464,5 +469,9 @@ var displayPrice = function() {
 	  }
 	} catch (e) {}
 }
+
+onAssigmentChange();
+displayPrice();
+
 </script>
 {% endblock %}
